--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
