--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set NODE_ENV=prod&& node src/server.js",
     "dev": "set NODE_ENV=dev&& nodemon src/server.js",
-    "macdev":"NODE_ENV=prod node src/server.js"
+    "macdev":"NODE_ENV=dev node src/server.js"
   },
   "author": "SivaLingam",
   "license": "MIT",
