--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
+    "gsap": "^3.12.3",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
