--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set NODE_ENV=prod&& node src/server.js",
     "dev": "set NODE_ENV=dev&& nodemon src/server.js",
-    "macdev":"NODE_ENV=dev node src/server.js"
+    "macdev": "NODE_ENV=dev node src/server.js"
   },
   "author": "SivaLingam",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
