--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -22,7 +23,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
