--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "INSPIRO IAS backend",
   "main": "server.js",
-  "scripts": {    
+  "scripts": {
     "start": "set NODE_ENV=prod&& node src/server.js",
     "dev": "set NODE_ENV=dev&& nodemon src/server.js",
     "macdev": "NODE_ENV=dev nodemon src/server.js"
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
